# refl

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.py  pyproject.toml
.github/workflows/: cd-manual.yml  ci.yml
cmake/: ExpectFailure.cmake  reflConfig.cmake.in
example/: CMakeLists.txt  basic_usage.cpp
src/: CMakeLists.txt
src/refl/: demo_manual_typeinfo.hpp  demo_models.hpp  refl.hpp
test/: CMakeLists.txt  smoke_test.cpp  unsupported_fixture.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: main.cpp
tools/: __init__.py
tools/refl_codegen/: clang_ast.py  cli.py  compile_commands.py  constants.py  errors.py  io_utils.py  main.py  models.py  paths.py  render.py  scanner.py
